create github pages

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header1 cid-sb2NRnSQrt mbr-fullscreen" id="header1-1">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-sb2NRnSQrt mbr-fullscreen" id="header1-1">
 
     
 
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-5">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong><a href="index.html" class="text-primary">محمود شاهين</a></strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>محمود شاهين</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">
                     تأكد من تحقيقك للدرجات النهائيه فى مادة التاريخ مع&nbsp; الأستاذ الشاب "محمود شاهين" احد افضل الأساتذة فى مادة التاريخ و من أكثرهم خبرة<br>و الأقرب دائما فى التوقعات لأسئلة الإمتحانات النهائيه</p>
