--- a/page3.html
+++ b/page3.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="footer3 cid-sb2OVLHWxu" once="footers" id="footer3-d">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="footer3 cid-sb2OVLHWxu" once="footers" id="footer3-d">
 
     
 
