--- a/page1.html
+++ b/page1.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="footer3 cid-sb2OVLHWxu" once="footers" id="footer3-9">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="footer3 cid-sb2OVLHWxu" once="footers" id="footer3-9">
 
     
 
