--- a/page2.html
+++ b/page2.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="footer3 cid-sb2OVLHWxu" once="footers" id="footer3-b">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="footer3 cid-sb2OVLHWxu" once="footers" id="footer3-b">
 
     
 
